css/style_add.css
/* ... */
#flow.flow_cont .toggle-content span.notes {
  background: none;
}
#flow.flow_cont .notes {
  font-size: 10px;
}

.beginner #search_box h2.ttl01,
.beginner .shindan_search_area h2.ttl01 {
  background: #bde2db;
  color: #000;
}
.beginner #content1 h2.content1_ttl {
  background-color: #fff;
  border: none;
  padding: 0;
  margin: 0;
}
.beginner #content1 h2.content1_ttl img {
  width: 1000px;
  margin: 0;
}
.beginner #content1 h2.content1_ttl::before {
  display: none;
}
.beginner #tab_1,
.beginner #tab_2 {
  max-width: 1000px;
  margin: 0 auto;
  display: flex;
  font-size: clamp(12px, 4vw, 24px);
}
.beginner #tab_1 p.active,
.beginner #tab_2 p.active {
  background-color: rgb(155, 201, 122);
  color: #fff;
  font-weight: bold;
  border: solid 1px rgb(155, 201, 122);
  cursor: pointer;
}
.beginner #tab_1 p,
.beginner #tab_2 p {
  background: #f0f0f0;
  background-color: rgb(240, 240, 240);
  text-align: center;
  border-radius: 5px 5px 0 0;
  margin-right: 5px;
  border: solid 1px #ddd;
  box-sizing: border-box;
  border-bottom: none;
  min-width: 55px;
  flex-grow: 1;
}
.beginner #tab_1 p:last-of-type,
.beginner #tab_2 p:last-of-type {
  margin-right: 0;
}
.beginner #ranking2 {
  margin: 0 auto;
  border: none;
  padding-top: 30px;
  border-radius: 0;
}
.beginner #ranking2 h2 {
  font-size: clamp(12px, 3vw, 25px);
  font-weight: bold;
  text-align: center;
  line-height: 1.2;
  border-bottom: none;
}
.beginner #ranking2 h2 span {
  color: rgb(155, 201, 122);
}
.beginner #ranking2 div {
  max-width: 980px;
  margin: 0 auto;
  position: relative;
}
.beginner #ranking2 .ranking2_content {
  display: none;
  justify-content: space-between;
  font-size: clamp(16px, 5vw, 28px);
  line-height: 35px;
  border: 1px solid #dcdcdc;
  border-top: none;
  padding: 5px;
  
  
  
}
.beginner #ranking2 .ranking2_content p:first-of-type {
  font-weight: bold;
}
.beginner #ranking2 .ranking2_content.active {
  display: flex;
}
.beginner #ranking2 .ranking2_content a {
  font-size: 80%;
  background-color: #eb1920;
  color: #fff;
  border-radius: 6px;
  padding-right: 35px;
  padding-left: 15px;
  position: relative;
  line-height: 24.5px;
  margin-top: 5.25px;
  margin-bottom: 5.25px;
}
.beginner #ranking2 .ranking2_content .crown::before {
  padding-right: 8px;
  
}
.beginner #ranking2 .ranking2_content .crown2::before {
  
  padding-right: 8px;
}
.beginner #ranking2 .ranking2_content .crown3::before {
  
  padding-right: 8px;
}
.beginner #ranking2 div {
  max-width: 980px;
  margin: 0 auto;
  position: relative;
}
.beginner #ranking2 div#tab_2 {
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  font-size: clamp(12px, 4vw, 24px);
  border-bottom: 1px solid #dcdcdc;
}
.beginner #ranking2 div#tab_2 p {
  background: #f0f0f0;
  background-color: rgb(240, 240, 240);
  text-align: center;
  border-radius: 5px 5px 0 0;
  margin-right: 5px;
  border: solid 1px #ddd;
  box-sizing: border-box;
  border-bottom: none;
  min-width: 55px;
  flex-grow: 1;
}
.beginner #ranking2 div#tab_2 p.active {
  background-color: rgb(155, 201, 122);
  color: #fff;
  font-weight: bold;
  border: solid 1px rgb(155, 201, 122);
  cursor: pointer;
}
.beginner #recommend2 {
  background: #fff;
}
.beginner #recommend2.btm_arrow02::after {
  position: static;
  transform: none;
  background: none;
  background-size: contain;
  background-color: #ccdcec;
  background: none;
  aspect-ratio: 1200/140;
  height: auto;
}
.beginner #recommend2 .topboxNew .basic .img img {
  width: 100%;
  height: auto;
}
.beginner #recommend2 .topboxNew .transition.mobile span {
  color: red;
  border-color: red;
}
.beginner #recommend2 .topboxNew .transition.mobile span::before {
  border-color: red;
}
.beginner .bg_box {
  background: #fff;
}
.beginner section {
  margin: 0 auto;
  max-width: 1200px;
}
.beginner section .inner {
  max-width: 1000px;
}
.beginner.search-results .after_box {
  margin-top: 63px;
}
.beginner.search-results .after_box h1 {
  background: #E2F9EE;
}
.beginner.search-results .optimal_recommend {
  background-color: #FFF2A9;
}
.beginner.search-results .optimal_recommend .optimal_ttl {
  text-shadow: 3px 3px 2px #0a3330, -1px 1px 0 #065e58, 1px -1px 0 #063a36, -1px -1px 0 #057069;
}
.beginner .modal-header {
  background: #bde2db;
}
.beginner .transition.mobile span {
  color: #ab5c01;
  border-color: #ab5c01;
}
.beginner .transition.mobile span::before {
  border-color: #ab5c01 transparent transparent;
}
.beginner .transition.mobile span.catch_top_recommend {
  border: none;
  background: none;
  top: -13px;
  margin-top: 10px;
  display: block;
  width: 220px;
  text-align: center;
  margin: 0 auto;
  left: calc(50% - 109px);
  box-shadow: none;
}
.beginner .transition.mobile span.catch_top_recommend::after, .beginner .transition.mobile span.catch_top_recommend::before {
  border: none;
}

.operation_info {
  max-width: 800px;
  margin: 0 auto;
  background: #fff;
  padding: 20px;
  border-radius: 8px;
}
.operation_info section {
  margin-bottom: 30px;
  padding: 1em;
}
.operation_info section p {
  padding: 20px;
}
.operation_info section h2 {
  border-left: 4px solid #0056b3;
  padding: 1em;
  margin-bottom: 10px;
  text-align: left;
  font-size: 18px;
  background: #174ca1;
  color: #fff;
}
.operation_info section h3 {
  padding-left: 1em;
  margin-bottom: -10px;
  font-weight: bold;
}
.operation_info section ul {
  padding: 20px;
  list-style-type: disc;
  margin-left: 20px;
}
.operation_info section ul ul {
  padding: 5px;
}

#footer .footerbox {
  padding: 20px;
}
#footer .footermenu ul li {
  width: 100%;
}
@media screen and (max-width: 768px) {
  #footer .footermenu ul li {
    width: 100%;
  }
}

.info tbody tr td,
.info.reco_table td {
  line-height: 1.2;
}
.info tbody tr td.isDoubleCircle,
.info.reco_table td.isDoubleCircle {
  background-image: url(../images/pict-double-circle.svg);
  background-size: 44px;
  background-repeat: no-repeat;
  background-position: center;
}
/* ... */

